<resources>
    <string name="app_name">Navigation</string>
    <string name="nav_settings">Settings</string>
    <string name="nav_profile">Profile</string>
    <string name="nav_favourite">Favourite</string>
    <string name="nav_feedback">Feedback</string>
    <string name="nav_share">Share</string>
    <string name="nav_about">About</string>
    <string name="nav_language">Language</string>
    <string name="select_language">Select Language</string>
    <string name="location">Location</string>
    <string name="category">Category</string>
    <string name="search_hostel">Search Hostel</string>
    <string name="hostel_count"> hostels available</string>
</resources>
